--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,16 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="https://use.typekit.net/uxp1ryy.css" />
+
+		<meta property="og:title" content="Aldo and Cynthia" />
+		<meta property="og:description" content="Aldo and Cynthia Wedding Invitation" />
+		<meta property="og:url" content="https://aldocynthia.anotherchapter.co/" />
+		<meta
+			property="og:image"
+			content="https://dev1.samueladitia.com/api/files/mb7qg1vwidinyoa/nx85ch6bwu9uqxg/group_LKkNT3M9Es.svg?token="
+		/>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
